crates/leyline-kernel/build_log.txt
    Checking leyline-kernel v0.1.0 (C:\LeylineAudioDriver\crates\leyline-kernel)
error[E0412]: cannot find type `KSDATAFORMAT_WAVEFORMATEX` in crate `wdk_sys`
  --> src\stream.rs:67:57
   |
67 |             let wave_format = format as *const wdk_sys::KSDATAFORMAT_WAVEFORMATEX;
   |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `wdk_sys`

error[E0308]: mismatched types
    --> src\stream.rs:61:39
     |
61   |             KeQueryPerformanceCounter(&mut frequency);
     |             ------------------------- ^^^^^^^^^^^^^^ expected `*mut _LARGE_INTEGER`, found `&mut i64`
     |             |
     |             arguments to this function are incorrect
     |
     = note:    expected raw pointer `*mut _LARGE_INTEGER`
             found mutable reference `&mut i64`
note: function defined here
    --> C:\LeylineAudioDriver\crates\leyline-kernel\target\debug\build\wdk-sys-ed3efed57f3a942a\out/ntddk.rs:5683:12
     |
5683 |     pub fn KeQueryPerformanceCounter(
     |            ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `current_time`
   --> src\stream.rs:105:29
    |
105 |                     let mut current_time: i64 = 0;
    |                             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_current_time`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
   --> src\stream.rs:105:25
    |
105 |                     let mut current_time: i64 = 0;
    |                         ----^^^^^^^^^^^^
    |                         |
    |                         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
   --> src\stream.rs:124:13
    |
124 |         let mut current_time: LARGE_INTEGER;
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

Some errors have detailed explanations: E0308, E0412.
For more information about an error, try `rustc --explain E0308`.
warning: `leyline-kernel` (lib) generated 3 warnings
error: could not compile `leyline-kernel` (lib) due to 2 previous errors; 3 warnings emitted
